--- a/experimental/config.json
+++ b/experimental/config.json
@@ -1,23 +1,35 @@
 {
-	"dbhost": "127.0.0.1",
-	"dbuser": "root",
-	"dbpassword": "password",
-	"dbname": "gosora",
-	"dbport": "3306",
-	
-	"default_group": 3,
-	"activation_group": 5,
+	"config.DefaultGroup": 3,
+	"config.ActivationGroup": 5,
 	"staff_css": " background-color: #ffeaff;",
 	"uncategorised_forum_visible": true,
-	"enable_emails": false,
-	"smtp_server": "",
-	"items_per_page": 40,
+	"site.EnableEmails": false,
+	"config.SmtpServer": "",
+	"config.ItemsPerPage": 40,
 	
-	"site_url": "localhost:8080",
-	"server_port": "8080",
-	"enable_ssl": false,
-	"ssl_privkey": "",
-	"ssl_fullchain": "",
+	"db": {
+		"Host": "127.0.0.1",
+		"Username": "root",
+		"Password": "password",
+		"Dbname": "gosora",
+		"Port": "3306"
+	},
 	
-	"debug": false
+	"site":
+	{
+		"Url": "localhost:8080",
+		"Port": "8080",
+		"EnableSsl": false
+	},
+	
+	"config":
+	{
+		"SslPrivkey": "",
+		"SslFullchain": ""
+	},
+	
+	"dev":
+	{
+		"debug": false
+	},
 }
