Refactored the code to follow best standards better. Added Basic IP Search. Added more items to .gitignore Add a VSCode settings file. Refactored the theme system to allow me to add a per-user theme switcher in the following commit. Fixed h1s, rowmenus, profiles and the Control Panel Dashboard on Tempra Simple. We now catch more extreme edge case errors. Renamed route_panel_themes_default to route_panel_themes_set_default. Centralised some of the per-route ExtData fields. Added an ExtData field to headerLite. Moved SettingLabels into the Phrase System.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 tmp/*
 tmp2/*
 cert_test/*
+tmp.txt
+run_notemplategen.bat
+brun.bat
 
 uploads/avatar_*
 uploads/socialgroup_*
@@ -10,3 +13,4 @@ bin/*
 *.prof
 *.log
 .DS_Store
+.vscode/launch.json
