Trying to get Travis to work. Cleaned up some of the CSS and fixed the other themes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ go:
   - 1.9
   - master
 before_install:
-  - chmod 755 ./install-linux
-  - chmod 755 ./run-linux
+  - chmod 755 ./update-deps-linux
+  - ./update-deps-linux
+install: true
 script: go test
 addons:
   mariadb: '10.0'
