--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ go:
   - master
 before_install:
   - chmod 755 ./update-deps-linux
+  - chmod 755 ./run-linux-tests
   - ./update-deps-linux
 install: true
-script: go test
+script: ./run-linux-tests
 addons:
   mariadb: '10.0'
