--- a/.codebeatignore
+++ b/.codebeatignore
@@ -1,6 +1,9 @@
 /public/trumbowyg/*
 /public/jquery-emojiarea/*
 /public/font-awesome-4.7.0/*
+/public/jquery-3.1.1.min.js
+/public/EQCSS.min.js
+/public/EQCSS.js
 /schema/*
 
 template_list.go
