Added the Rez Image Resizer as a dependency to be used later.
Is Codebeat fixed now?
Fixed a data race in PreRoute and refactored away the duplicate IP Address loads.
Renamed some of the variables in the query generator.
Slight bit more progress on Cosora.

--- a/.codebeatignore
+++ b/.codebeatignore
@@ -1,10 +1,10 @@
-/public/trumbowyg/*
-/public/jquery-emojiarea/*
-/public/font-awesome-4.7.0/*
+/public/trumbowyg/**
+/public/jquery-emojiarea/**
+/public/font-awesome-4.7.0/**
 /public/jquery-3.1.1.min.js
 /public/EQCSS.min.js
 /public/EQCSS.js
-/schema/*
+/schema/**
 
 template_list.go
 template_forum.go
