Updated the codebeat and codeclimate config files. Renamed the pre_render_view_forum hook to pre_render_forum. Renamed the pre_render_ips hook to pre_render_ip_search. Renamed routeTopicCreate to CreateTopic and moved it into /routes/topic.go Moved three routes into /routes/user.go Renamed routeIps to IPSearch and moved it into /routes/moderate.go Moved the IP Search logic out of the route and into the DefaultIPSearcher. Added InQ() to the select builders and replaced three hand-rolled queries with it. De-duplicated some pagination logic.

--- a/.codebeatignore
+++ b/.codebeatignore
@@ -1,3 +1,4 @@
+/public/chartist/**
 /public/trumbowyg/**
 /public/jquery-emojiarea/**
 /public/font-awesome-4.7.0/**
@@ -17,3 +18,4 @@ template_profile.go
 gen_mysql.go
 gen_mssql.go
 gen_pgsql.go
+gen_router.go
