You can now disable slugs.
Split ops.log into ops.log and requests.log
Moved the logs into the logs directory.
Moved more password validation logic in the registration route into WeakPassword().
Tweaked the WeakPassword algorithm to cover more cases and to reduce the number of false positives.
Fixed the error grammer in WeakPassword now that the linter isn't bothering me about that anymore.
Fixed BuildGuildURL().
Removed some commented logging logic.
Bad requests are no longer logged to the console.
All bad routes are logged now.
We now track the instance uptime on the Control Panel Debug Page.
Added the executables for Linux to the .gitignore file.
Added GopherJS as a dependency.

Began work on transpiling WeakPassword to JavaScript in use in the client-side logic.

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ attachs/*
 uploads/avatar_*
 uploads/socialgroup_*
 backups/*.sql
+logs/*.log
 node_modules/*
 bin/*
 out/*
-logs/*
 *.exe
 *.exe~
 *.prof
@@ -21,3 +21,5 @@ logs/*
 .DS_Store
 .vscode/launch.json
 config.go
+Gosora
+Install
