All the menu items are dynamic now, all that needs to be done now is the Control Panel part of the Menu Manager. Travis should now build the patcher to see if that works. Merged menu.html into header.html Removed a redundant SetAdapter call in mysql.go. Fixed a bug where inserting will sometimes strip the spaces in strings. Bumped the minimum Go Version in schema.json to 1.10 Bumped the DBVersion to 1, so that we don't install these patches twice.
The patcher was botched in the previous commit, drop menus and menu_items and run it again

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ before_install:
   - cd Gosora
   - mv config_default.noparse config.go
   - chmod 755 ./update-deps-linux
+  - chmod 755 ./dev-update-travis
   - chmod 755 ./run-linux-tests
   - ./update-deps-linux
+  - ./dev-update-travis
 install: true
 script: ./run-linux-tests
 addons:
