Made progress on Nox, fixed a phrase, and added a couple of missing phrases.
Nox now supports bulk moderations.
Began work on mobile with Nox.
Made several visual improvements for Nox.
Updated the service example.

--- a/gosora_example.service
+++ b/gosora_example.service
@@ -4,7 +4,7 @@ Description=A service for the Gosora Forum Software
 
 [Service]
 Type=simple
-# You might want to create a user / group for Gosora and set these to further harden your system
+# You might want to create a user / group for Gosora and set these to further harden your system, although this this might not work right now, if we're listening directly on port 80 / 443
 #User=gosoraservice
 #Group=gosoraservice
 
