PNG and JPG avatars are now encoded as JPG images leading to a dramatic drop in the amount of bandwidth used. Did some work on image thumbnailing, but our dependencies are acting up delaying this from being released.
Fixed the positions of the topic list bits for Nox on mobile.
Removed APNG as an accepted image format, as we don't currently have a good way of optimising these images.
Added a comment regarding the constant time compare for sessions.
Added a warning about putting Gosora in www folders.
Noavatars can now take a width parameters.
Added a bit of missing validation for the avatar uploader.
Refactored the multiple file detector for the avatar uploader.

Added a Run method to accDeleteBuilder.
Added an EachInt method to AccSelectBuilder.
Added a Run method to accInsertBuilder.

Added the users_avatar_queue table, you will need to run the patcher / update script.
You might also want to update the Noavatar field in your config.json file with the new one.

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -30,7 +30,7 @@
 		"MinifyTemplates":true,
 		"BuildSlugs":true,
 		"ServerCount":1,
-		"Noavatar":"https://api.adorable.io/avatars/285/{id}@{site_url}.png",
+		"Noavatar":"https://api.adorable.io/avatars/{width}/{id}@{site_url}.png",
 		"ItemsPerPage":25
 	},
 	"Database": {
