--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_script:
   - ./cc-test-reporter before-build
 script: ./run-linux-tests
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - gocov test -coverprofile=out 
+  - ./cc-test-reporter format-coverage --input-type gocov out 
+  - ./cc-test-reporter upload-coverage
 addons:
   mariadb: '10.0'
