Let's try a slightly different approach to try to get CC to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,9 @@ install: true
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
-  - go get github.com/axw/gocov/gocov
   - ./cc-test-reporter before-build
 script: ./run-linux-tests
 after_script:
-  - gocov test -coverprofile=out 
-  - ./cc-test-reporter format-coverage --input-type gocov out 
-  - ./cc-test-reporter upload-coverage
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 addons:
   mariadb: '10.0'
