--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - cd $HOME
   - git clone https://github.com/Azareal/Gosora
   - cd Gosora
-  - chmod -R 0755
+  - chmod -R 0755 .
   - mv ./config/config_example.json ./config/config.json
   - ./update-deps-linux
   - ./dev-update-travis
