--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,8 @@ before_install:
   - cd $HOME
   - git clone https://github.com/Azareal/Gosora
   - cd Gosora
+  - chmod -R 0755 .
   - mv ./config/config_example.json ./config/config.json
-  - chmod 755 ./update-deps-linux
-  - chmod 755 ./dev-update-travis
-  - chmod 755 ./run-linux-tests
   - ./update-deps-linux
   - ./dev-update-travis
 install: true
