--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ uploads/avatar_*
 uploads/socialgroup_*
 backups/*.sql
 logs/*.log
+config/config.json
 node_modules/*
 bin/*
 out/*
@@ -22,6 +23,9 @@ out/*
 .vscode/launch.json
 schema/lastSchema.json
 config/config.go
+QueryGen
+RouterGen
+Patcher
 Gosora
 Install
 template_*.go
