--- a/gosora_example.service
+++ b/gosora_example.service
@@ -15,5 +15,8 @@ WorkingDirectory=/home/gosora
 # Make sure you manually run pre-run-linux before you start the service
 ExecStart=/home/gosora/Gosora
 
+# Let's hope this doesn't blow up on me
+ProtectSystem=full
+
 [Install]
 WantedBy=multi-user.target
