Added the init.js file to make certain bits of JS run sooner than others. The template_*.js files should get cached now. The phrase API results might get cached now. Solved an edge case in the attachment parser where a redirect is triggered on a HTTPS site when the attachment is posted as a HTTP URL. Fixed runHook in the JS files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,10 @@
     },
 	"globals": {
 		"$": true,
-		"session": true,
-		"siteURL": true
+        "addHook": true,
+        "runHook": true,
+        "addInitHook": true,
+        "runInitHook": true,
+        "loadScript": true
 	}
 }
