This will require further investigation, thanks MariaDB.

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -16,6 +16,7 @@
 		"SMTPUsername": "",
 		"SMTPPassword": "",
 		"SMTPPort": "25",
+		"Search":"disabled",
 
 		"MaxRequestSizeStr":"5MB",
 		"UserCache":"static",
