Added a small reply cache. Preloaded a small number of users and topics. Use cache.Set instead of cache.Add in a few spots for topics to avoid issues with the counter falling out of sync with the cache length. Embed Reply in ReplyUser instead of duplicating the same fields. Add the missing AttachCount and ActionType fields to Reply. Add the missing Poll field to TopicsRow. Added the TopicUser.Replies method to better abstract the reply list generation logic. Shortened some common.s to c.s Moved memStuff out of the analytics memory panes and into analytics.js Removed the temporary preStats fix for label overflow now that we have a better solution. Added the panel_analytics_script_memory template to help de-dupe logic in the analytics memory panes. Added the Topic method to TopicsRow. Added the GetRidsForTopic method to help cache replies in a small set of scenarios.
Added the ReplyCache config.json setting.
Added the ReplyCacheCapacity config.json setting.

Added a parser test case.
Added more Reply and ReplyStore related test cases.

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -20,8 +20,10 @@
 		"MaxRequestSizeStr":"5MB",
 		"UserCache":"static",
 		"TopicCache":"static",
+		"ReplyCache":"static",
 		"UserCacheCapacity":180,
 		"TopicCacheCapacity":400,
+		"ReplyCacheCapacity":20,
 		"DefaultPath":"/topics/",
 		"DefaultGroup":3,
 		"ActivationGroup":5,
