Eliminate a mv in the installation tutorials and add a missing cd in the advanced installation steps.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ go:
   - master
 before_install:
   - cd $HOME
-  - git clone https://github.com/Azareal/Gosora
-  - cd Gosora
+  - git clone https://github.com/Azareal/Gosora gosora
+  - cd gosora
   - chmod -R 0777 .
   - mv ./config/config_example.json ./config/config.json
   - ./update-deps-linux
